# Lab9

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
arrays/: Appendable.h  Array.cpp  Array.h  Collection.cpp  Collection.h  Indexable.h  Set.cpp  Set.h
collections/: Array.cpp  Array.h  Collection.cpp  Indexable.h  Set.cpp
